--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/indicadores/selectTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/indicadores/selectTrabajoSocialPlanificado.zul
@@ -1,9 +1,12 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el evento a planificar"
+				<label value="Seleccione el trabajo social a planificar"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -33,9 +36,9 @@
 									<listcell
 										label="@load(each.fkTrabajoSocial.nombre)" />
 									<listcell
-										label="@load(each.fkTrabajoSocial.descripcion)" />
+										label="@load(each.descripcion)" />
 									<listcell
-										label="@load(each.fechaPlanificada)" />
+										label="${m:convertirLongADate(each.fechaPlanificada)}" />
 									<listcell
 										label="@load(each.fkDirectorio.nombre)" />
 									<listcell
