--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/ParticipantesActividadesTrabajoSocialPlanificadoIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/ParticipantesActividadesTrabajoSocialPlanificadoIndex.zul
@@ -2,7 +2,7 @@
 	<div class="wizard ${arg.animation_}" style="padding:0px auto"
 		use="karen.core.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.actividades.indicadores.viewmodels.VM_IndicadoresActividadesTrabajoSocialPlanificado')">
+		viewModel="@id('vm') @init('ve.smile.gestion.trabajo_social.planificacion.actividades.participantes.viewmodels.VM_ParticipantesActividadesTrabajoSocialPlanificado')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
