--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/actividadesParticipantes.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/participantes/actividadesParticipantes.zul
@@ -1,14 +1,27 @@
-<div sclass="row section animated fadeInLeft"
-	style="background: #FFFFFF">
+<?xel-method prefix="m" name="getBufferedImage" class="lights.smile.util.Zki" 
+	signature="java.awt.image.BufferedImage getBufferedImage(java.lang.String)" ?>
+
+<div sclass="row section animated fadeInLeft">
 
 	<style>
+
+		.z-grid-emptybody td { font-family: Roboto; font-size: 13px;
+		font-weight: normal; font-style: normal; color: #aaa;
+		font-style: italic; text-align: center; height: 1px; padding:
+		6px !important; }
+
+		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
+		13px; color: #ffffff; background: #8d7a6f; }
+
+		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF;
+		background: #ffffff; }
+
+
 		.z-row .z-detail-outer { width: 40px; min-width: 40px;
 		border-top: 1px solid #cfcfcf; padding: 18px 6px; line-height:
 		normal; background: transparent !important; vertical-align: top;
 		}
 
-		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
-		13px; color: #707070; }
 
 		.z-auxhead:hover .z-auxheader-content { background: #EEEEEE
 		!important; }
@@ -21,8 +34,6 @@
 		none !important; padding: 0; line-height: 14px; background:
 		transparent !important; text-align: center; overflow: hidden;
 		white-space: nowrap; cursor: pointer; }
-
-		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF; }
 
 		.z-columns th:first-child { border-left: none; border-right:
 		none !important; }
@@ -56,103 +67,236 @@
 
 	</style>
 	<div sclass="col s12">
-		<grid id="Grid" sclass="periodo grid"
-			model="@bind(vm.listTsPlanActividads)">
-			<columns sclass="header-periodo-vacacional">
-				<column width="5%" />
-				<column label="Nombre" sort="auto(nombre)" width="25%" />
-				<column label="Descripción" sort="auto(descripcion)"
-					align="center" width="35%" />
-				<column label="Clasificador de Tarea"
-					sort="auto(clasificadoTarea)" align="center" width="23%" />
-				<column label="Indicadores" align="center"
-					width="12%">
+		<tabbox id="tb" class="rtab ltab">
+			<tabs id="tabs">
+				<tab id="tabVoluntarios" label="Voluntarios" />
+				<tab id="tabTrabajadores" label="Trabajadores" />
+			</tabs>
+			<tabpanels>
+				<tabpanel sclass="animated fadeIn">
+					<grid id="Grid" sclass="periodo grid" height="500px"
+						emptyMessage="No hay actividades asociadas al trabajo social"
+						model="@bind(vm.listTsPlanActividads)">
+						<columns sclass="header-periodo-vacacional">
+							<column width="5%" />
+							<column label="Nombre" sort="auto(nombre)"
+								width="25%" />
+							<column label="Descripción"
+								sort="auto(descripcion)" align="center" width="35%" />
+							<column label="Clasificador de Tarea"
+								sort="auto(clasificadoTarea)" align="center" width="23%" />
+							<column label="Indicadores" align="center"
+								width="12%">
 
-				</column>
-			</columns>
-			<template name="model" var="actividad" status="statusActividad">
-				<row style="overflow:auto; max-height:200px"
-					sclass="row-vacaciones">
+							</column>
+						</columns>
+						<template name="model" var="actividad"
+							status="statusActividad">
+							<row style="overflow:auto; max-height:200px"
+								sclass="row-vacaciones">
 
 
-					<detail open="false" fulfill="onOpen">
+								<detail open="false" fulfill="onOpen">
 
-						<grid sclass="vacacion"
-							model="@bind(actividad.indicadorTsPlanActividads)">
-							<auxhead>
-								<auxheader colspan="4" align="center"
-									label="INDICADORES ASOCIADOS">
-								</auxheader>
-							</auxhead>
-							<columns sclass="header-periodo-disfute">
+									<grid sclass="vacacion"
+										emptyMessage="No hay voluntarios asociados a las actividades"
+										model="@bind(actividad.tsPlanActividadVoluntarios)">
+										<auxhead>
+											<auxheader colspan="4"
+												align="center" label="VOLUNTARIOS ASOCIADOS">
+											</auxheader>
+										</auxhead>
+										<columns
+											sclass="header-periodo-disfute">
+											<column label=""
+												width="21%" />
+											<column label="Cédula/Rif"
+												width="29%" />
+											<column label="Voluntario"
+												align="center" width="20%" />
+											<column label="Eliminar"
+												width="10%" align="center">
+											</column>
 
-								<column label="Nombre" width="21%" />
+										</columns>
+										<template name="model">
+											<row sclass="last">
 
-								<column label="Unidad de Medida"
-									align="center" width="29%" />
-								<column label="Valor Esperado"
-									align="center" width="20%">
+												<cell
+													sclass="vacacion">
+													<!-- 										<div align="center" -->
+													<!-- 											visible="@bind(not empty each.fkVoluntario.fkPersona.fkMultimedia)"> -->
+													<!-- 											<image -->
+													<!-- 												content="${m:getBufferedImage(each.fkVoluntario.fkPersona.fkMultimedia.url)}" -->
+													<!-- 												width="30px" height="30px" sclass="circle"> -->
+													<!-- 											</image> -->
+													<!-- 										</div> -->
+												</cell>
 
-								</column>
-								<column label="Eliminar" align="center"
-									width="10%">
+												<cell
+													sclass="vacacion">
+													<label
+														value="@bind(each.fkVoluntario.fkPersona.identificacion)" />
+												</cell>
 
-								</column>
-							</columns>
-							<template name="model">
-								<row sclass="last">
+												<cell
+													sclass="vacacion">
+													<label
+														value="@bind(each.fkVoluntario.fkPersona.nombre.concat(' ').concat(each.fkVoluntario.fkPersona.apellido))" />
+												</cell>
+												<cell sclass="vacacion"
+													style="    border-left: 2px solid #EEEEEE !important;">
+													<button
+														onClick="@command('eliminarVoluntario', tsPlanActividadVoluntario=each, index=statusActividad.index)"
+														sclass="btn-sm-grid btn-pink " style="margin-left: 3px;"
+														tooltiptext="Eliminar" iconSclass="fa fa-trash">
+													</button>
+												</cell>
+											</row>
+										</template>
+									</grid>
+								</detail>
 
-									<cell sclass="vacacion">
-										<label
-											value="@bind(each.fkIndicador.nombre)" />
-									</cell>
+								<cell sclass="periodo">
+									<label
+										value="@bind(actividad.fkActividad.nombre) " />
+								</cell>
 
-									<cell sclass="vacacion">
-										<label
-											value="@bind(each.fkIndicador.fkUnidadMedida.nombre)" />
-									</cell>
-									<cell sclass="vacacion">
-										<intbox
-											style="height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
-											value="@bind(each.valorEsperado)">
-										</intbox>
-									</cell>
-									<cell sclass="vacacion"
-										style="    border-left: 2px solid #EEEEEE !important;">
-										<button
-											onClick="@command('eliminarIndicador', indicadorTsPlanActividad=each, index=statusActividad.index)"
-											sclass="btn-sm-grid btn-pink " style="margin-left: 3px;"
-											tooltiptext="Eliminar" iconSclass="fa fa-trash">
-										</button>
-									</cell>
-								</row>
-							</template>
-						</grid>
-					</detail>
+								<cell sclass="periodo">
+									<label
+										value="@bind(actividad.fkActividad.descripcion)" />
+								</cell>
+								<cell sclass="periodo">
+									<label
+										value="@bind(actividad.fkActividad.fkClasificadorActividad.nombre)" />
+								</cell>
+								<cell sclass="periodo">
+									<button
+										sclass="teal lighten-1 waves-effect waves-light"
+										onClick="@command('buscarVoluntarios', index=statusActividad.index)"
+										iconSclass="fa fa-search" tooltiptext="Editar Lugar"
+										style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
+									</button>
+								</cell>
+							</row>
+						</template>
+					</grid>
 
-					<cell sclass="periodo">
-						<label value="@bind(actividad.fkActividad.nombre) " />
-					</cell>
+				</tabpanel>
+				<tabpanel sclass="animated fadeIn">
+					<grid id="gridTrabajadores" sclass="periodo grid"
+						height="500px"
+						emptyMessage="No hay trabajadores asociados a las tareas"
+						model="@bind(vm.listTsPlanActividads)">
+						<columns sclass="header-periodo-vacacional">
+							<column width="5%" />
+							<column label="Nombre" sort="auto(nombre)"
+								width="25%" />
+							<column label="Descripción"
+								sort="auto(descripcion)" align="center" width="35%" />
+							<column label="Clasificador de Tarea"
+								sort="auto(clasificadoTarea)" align="center" width="23%" />
+							<column label="Indicadores" align="center"
+								width="12%">
 
-					<cell sclass="periodo">
-						<label
-							value="@bind(actividad.fkActividad.descripcion)" />
-					</cell>
-					<cell sclass="periodo">
-						<label
-							value="@bind(actividad.fkActividad.fkClasificadorActividad.nombre)" />
-					</cell>
-					<cell sclass="periodo">
-						<button
-							sclass="teal lighten-1 waves-effect waves-light"
-							onClick="@command('buscarIndicadores', index=statusActividad.index)"
-							iconSclass="fa fa-search" tooltiptext="Editar Lugar"
-							style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
-						</button>
-					</cell>
-				</row>
-			</template>
-		</grid>
+							</column>
+						</columns>
+						<template name="model" var="actividad"
+							status="statusActividad">
+							<row style="overflow:auto; max-height:200px"
+								sclass="row-vacaciones">
+
+
+								<detail open="false" fulfill="onOpen">
+
+									<grid sclass="vacacion"
+										emptyMessage="No hay trabajadores asociados a las tareas"
+										model="@bind(actividad.tsPlanActividadTrabajadors)">
+										<auxhead>
+											<auxheader colspan="4"
+												align="center" label="TRABAJADORES ASOCIADOS">
+											</auxheader>
+										</auxhead>
+										<columns
+											sclass="header-periodo-disfute">
+											<column label=""
+												width="21%" />
+											<column label="Cédula/Rif"
+												width="29%" />
+
+											<column label="Voluntario"
+												align="center" width="20%" />
+											<column label="Eliminar"
+												width="10%" align="center">
+											</column>
+
+										</columns>
+										<template name="model">
+											<row sclass="last">
+
+												<cell
+													sclass="vacacion">
+													<!-- 										<div align="center" -->
+													<!-- 											visible="@bind(not empty each.fkVoluntario.fkPersona.fkMultimedia)"> -->
+													<!-- 											<image -->
+													<!-- 												content="${m:getBufferedImage(each.fkVoluntario.fkPersona.fkMultimedia.url)}" -->
+													<!-- 												width="30px" height="30px" sclass="circle"> -->
+													<!-- 											</image> -->
+													<!-- 										</div> -->
+												</cell>
+
+												<cell
+													sclass="vacacion">
+													<label
+														value="@bind(each.fkTrabajador.fkPersona.identificacion)" />
+												</cell>
+
+												<cell
+													sclass="vacacion">
+													<label
+														value="@bind(each.fkTrabajador.fkPersona.nombre.concat(' ').concat(each.fkTrabajador.fkPersona.apellido))" />
+												</cell>
+												<cell sclass="vacacion"
+													style="    border-left: 2px solid #EEEEEE !important;">
+													<button
+														onClick="@command('eliminarTrabajador', tsPlanActividadTrabajador=each, index=statusActividad.index)"
+														sclass="btn-sm-grid btn-pink " style="margin-left: 3px;"
+														tooltiptext="Eliminar" iconSclass="fa fa-trash">
+													</button>
+												</cell>
+											</row>
+										</template>
+									</grid>
+								</detail>
+
+								<cell sclass="periodo">
+									<label
+										value="@bind(actividad.fkActividad.nombre) " />
+								</cell>
+
+								<cell sclass="periodo">
+									<label
+										value="@bind(actividad.fkActividad.descripcion)" />
+								</cell>
+								<cell sclass="periodo">
+									<label
+										value="@bind(actividad.fkActividad.fkClasificadorActividad.nombre)" />
+								</cell>
+								<cell sclass="periodo">
+									<button
+										sclass="teal lighten-1 waves-effect waves-light"
+										onClick="@command('buscarTrabajadores', index=statusActividad.index)"
+										iconSclass="fa fa-search" tooltiptext="Buscar Trabajadores"
+										style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
+									</button>
+								</cell>
+							</row>
+						</template>
+					</grid>
+				</tabpanel>
+			</tabpanels>
+		</tabbox>
+
 	</div>
 
 </div>
