--- a/WebContent/views/desktop/gestion/apadrinamiento/egreso/registroMotivo.zul
+++ b/WebContent/views/desktop/gestion/apadrinamiento/egreso/registroMotivo.zul
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Ingrese el motivo de la selección"
+				<label value="Ingrese el motivo del egreso"
 					sclass="label-medium-500">
 				</label>
 			</div>
