--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/InscripcionCapacitacionIndex.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/InscripcionCapacitacionIndex.zul
@@ -2,9 +2,11 @@
 	<div class="wizard ${arg.animation_} container"
 		use="karen.core.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.ejecucion.viewmodels.VM_CapacitacionEjecutadaIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.inscripcion.viewmodels.VM_InscripcionCapacitacionIndex')">
 		<div class="row">
-			<div id="ulHeaderWizard" use="karen.core.wizard.buttons.containers.UlHeaderWizard"> </div>
+			<div id="ulHeaderWizard"
+				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
+			</div>
 
 			<div sclass="col s12">
 				<include id="include"></include>
