--- a/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioFormBasic.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioFormBasic.zul
@@ -8,56 +8,63 @@
 
 		<div class="row">
 			<div sclass="col s12 form">
-			
+
 				<tabbox id="tb" class="rtab ltab">
 					<tabs id="tabs">
-						<tab id="tabDatosPersonales" label="Datos personales" selected="true" />
-						<tab id="tabContacto" label="Información de contacto" />
+						<tab id="tabDatosPersonales" label="Datos principales" selected="true" />
+						<tab id="tabDatosContacto" label="Información de contacto" />
+						<tab id="tabDatosProfesiones" label="Profesiones" />
 					</tabs>
 
 					<tabpanels>
-						<tabpanel>
-			
+						<tabpanel sclass="animated fadeIn">
 							<div class="input-field col s6">
-								<n:label for="nombre" class="mandatory">Nombre</n:label>
-								<textbox id="nombre" type="text" value="@bind(vm.persona.nombre)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="apellido" class="mandatory">Apellido</n:label>
-								<textbox id="apellido" type="text" value="@bind(vm.persona.apellido)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="tipo_persona" class="active">Tipo de persona</n:label>
-								<combobox id="tipo_persona" readonly="true" model="@bind(vm.tipoPersonaEnums)" selectedItem="@bind(vm.tipoPersonaEnum)">
+								<n:label for="tipo_persona" class="active"> Tipo de persona </n:label>
+								<combobox id="tipo_persona" model="@bind(vm.tipoPersonaEnums)" readonly="true" selectedItem="@bind(vm.tipoPersonaEnum)">
 									<template name="model">
-										<comboitem label="@load(each)" />
+										<comboitem label="@load(each )" />
 									</template>
 								</combobox>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_persona, position=after_end" />
+							</div>
+
+							<div class="input-field col s6">
+								<n:label for="identificacion"> Cédula </n:label>
+								<textbox id="identificacion" type="text" value="@bind(vm.voluntario.fkPersona.identificacion)"> </textbox>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_identificacion, position=after_end" />
 							</div>
 							
 							<div class="input-field col s6">
-								<n:label for="identificacion" class="mandatory">Cedula</n:label>
-								<textbox id="identificacion" type="text" value="@bind(vm.persona.identificacion)"> </textbox>
+								<n:label for="nombre"> Nombre </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_nombre, position=after_end" />
+								<textbox id="nombre" type="text" value="@bind(vm.voluntario.fkPersona.nombre)"> </textbox>
 							</div>
 							
 							<div class="input-field col s6">
-								<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
-								<datebox id="db" cols="20" format="yyyy/MM/dd" value="@bind(vm.fechaNacimiento)"/>
+								<n:label for="apellido"> Apellido </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_apellido, position=after_end" />
+								<textbox id="apellido" type="text" value="@bind(vm.voluntario.fkPersona.apellido)"> </textbox>
 							</div>
 							
 							<div class="input-field col s6">
-								<n:label for="sexo" class="active">Sexo</n:label>
+								<n:label for="sexo" class="active"> Sexo </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_sexo, position=after_end" />
 								<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.sexoEnum)">
-									<template name="model">
-										<comboitem label="@load(each)" />
+									<template name="model" var="sexo">
+										<comboitem label="@bind(sexo)" />
 									</template>
 								</combobox>
 							</div>
+
+							<div class="input-field col s6">
+								<n:label for="fecha_nacimiento" class="active"> Fecha de nacimiento </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fecha_nacimiento, position=after_end" />
+								<datebox id="db" cols="20" readonly="true" format="dd/MM/yyyy" value="@bind(vm.fechaNacimiento)" />
+							</div>
 							
 							<div class="input-field col s6">
-								<n:label class="active"	for="fk_estado">Estado</n:label>
+								<n:label class="active" for="fk_estado"> Estado </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_estado, position=after_end" />
 								<combobox id="fk_estado" readonly="true" placeholder="Seleccione un estado" instant="true" onSelect="@command('changeEstado')" model="@bind(vm.estados)" selectedItem="@bind(vm.estado)">
 									<template name="model">
 										<comboitem label="@load(each.nombre)" />
@@ -66,86 +73,139 @@
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="fk_ciudad">Ciudad</n:label>
-								<combobox id="fk_ciudad" readonly="true" placeholder="Seleccione una ciudad" disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)" selectedItem="@bind(vm.persona.fkCiudad)">
+								<n:label class="active" for="fk_ciudad"> Ciudad </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_ciudad, position=after_end" />
+								<combobox id="fk_ciudad" readonly="true" placeholder="Seleccione una ciudad" disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)" selectedItem="@bind(vm.voluntario.fkPersona.fkCiudad)">
 									<template name="model">
 										<comboitem label="@load(each.nombre)" />
 									</template>
 								</combobox>
 							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="fecha_ingreso" class="active">Fecha de ingreso</n:label>
-								<datebox id="fecha_ingreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.voluntario.fechaIngreso)"/>
+
+							<div class="col s6" style="padding:0px">
+								<div class="input-field col s12">
+									<n:label for="fecha_ingreso" class="active"> Fecha de ingreso </n:label>
+									<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fecha_ingreso, position=after_end" />
+									<datebox id="fecha_ingreso" cols="20" format="dd/MM/yyyy" readonly="true" value="@bind(vm.fechaIngreso)" />
+								</div>
 							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="fecha_egreso" class="active">Fecha de egreso</n:label>
-								<datebox id="fecha_egreso" cols="20" format="yyyy/MM/dd" value="@bind(vm.voluntario.fechaEgreso)"/>
+
+							<div class="input-field col s12">
+								<n:label for="direccion"> Dirección </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_direccion, position=after_end" />
+								<textbox id="direccion" type="text" sclass="materialize-textarea" multiline="true" value="@bind(vm.voluntario.fkPersona.direccion)"></textbox>
 							</div>
-							
-							<div class="input-field col s6">
-								<n:label for="direccion">Dirección</n:label>
-								<textbox id="direccion" type="text" sclass="materialize-textarea" multiline="true" value="@bind(vm.persona.direccion)">	</textbox>
-							</div>
-							
+
 							<div class="col s6" style="padding:0px;">
 								<div class="input-field col s12">
+									<span style="float:right" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_imagen, position=after_end" />
 									<uploadImageSingle maxsize="9000" size="200" idUpload="1" title="Imagen del voluntario" />
 								</div>
 							</div>
-						
+
 						</tabpanel>
+
+						<tabpanel sclass="animated fadeIn">
+
+							<div class="input-field col s6">
+								<n:label class="active" for="telefono_1"> Teléfono 1 </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_telefono1, position=after_end" />
+								<textbox id="telefono_1" type="text" value="@bind(vm.voluntario.fkPersona.telefono1)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="telefono_2"> Teléfono 2 </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_telefono2, position=after_end" />
+								<textbox id="telefono_2" type="text" value="@bind(vm.voluntario.fkPersona.telefono2)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="fax"> Fax </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fax, position=after_end" />
+								<textbox id="fax" type="text" value="@bind(vm.voluntario.fkPersona.fax)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="correo"> Correo electrónico </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_correo, position=after_end" />
+								<textbox id="correo" type="text" value="@bind(vm.voluntario.fkPersona.correo)">
+								</textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="twitter"> Twitter </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_twitter, position=after_end" />
+								<textbox id="twitter" type="text" value="@bind(vm.voluntario.fkPersona.twitter)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="instagram"> Instagram </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_instagram, position=after_end" />
+								<textbox id="instagram" type="text" value="@bind(vm.voluntario.fkPersona.instagram)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="facebook"> Facebook </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_facebook, position=after_end" />
+								<textbox id="facebook" type="text" value="@bind(vm.voluntario.fkPersona.facebook)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="linkedin"> LinkedIn </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_linkedin, position=after_end" />
+								<textbox id="linkedin" type="text" value="@bind(vm.voluntario.fkPersona.linkedin)"> </textbox>
+							</div>
+
+							<div class="input-field col s6">
+								<n:label class="active" for="sitioWeb"> Sitio web </n:label>
+								<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_web, position=after_end" />
+								<textbox id="sitioWeb" type="text" value="@bind(vm.voluntario.fkPersona.sitioWeb)"> </textbox>
+							</div>
+
+						</tabpanel>
+
+						<tabpanel sclass="animated fadeIn">
 						
-						<tabpanel>
-						
-							<div class="input-field col s6">
-								<n:label for="telefono_1">Teléfono 1</n:label>
-								<textbox id="telefono_1" type="text" value="@bind(vm.persona.telefono1)"> </textbox>
+							<div class="col s12">
+								<div sclass="col s5" style="padding:0px">
+									<listbox model="@load(vm.profesiones)" emptyMessage="No hay profesiones registradas" selectedItems="@bind(vm.profesionesSeleccionadas)" multiple="true">
+										<listhead sizable="true">
+											<listheader label="Profesiones" />
+										</listhead>
+										<template name="model">
+											<listitem label="@load(each.nombre)">
+												<zscript> self.setDisabled(vm.disabledProfesion(each)); </zscript>
+											</listitem>
+										</template>
+									</listbox>
+								</div>
+					
+								<div sclass="col s1" align="center">
+									<div sclass="row">
+										<button sclass="button-conf" iconSclass="fa fa-angle-double-right" onClick="@command('agregarProfesiones')" />
+									</div>
+									<div sclass="row">
+										<button sclass="button-conf" iconSclass="fa fa-angle-double-left" onClick="@command('removerProfesiones')" />
+									</div>
+								</div>
+
+								<div sclass="col s5" style="padding:0px">
+									<listbox model="@load(vm.voluntarioProfesiones)" emptyMessage="No hay profesiones asociadas al voluntario" selectedItems="@bind(vm.voluntarioProfesionesSeleccionadas)" multiple="true">
+										<listhead sizable="true">
+											<listheader label="Profesiones del voluntario" />
+										</listhead>
+										<template name="model">
+											<listitem label="@load(each.nombre)" />
+										</template>
+									</listbox>
+								</div>
 							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="telefono_2">Teléfono 2</n:label>
-								<textbox id="telefono_2" type="text" value="@bind(vm.persona.telefono2)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="twitter">Twitter</n:label>
-								<textbox id="twitter" type="text" value="@bind(vm.persona.twitter)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="instagram">Instagram</n:label>
-								<textbox id="instagram" type="text" value="@bind(vm.persona.instagram)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="linkedin">LinkedIn</n:label>
-								<textbox id="linkedin" type="text" value="@bind(vm.persona.linkedin)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="sitioWeb">Sitio web</n:label>
-								<textbox id="sitioWeb" type="text" value="@bind(vm.persona.sitioWeb)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="fax">Fax</n:label>
-								<textbox id="fax" type="text" value="@bind(vm.persona.fax)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="correo">Corrreo electrónico</n:label>
-								<textbox id="correo" type="text" value="@bind(vm.persona.correo)"> </textbox>
-							</div>
-				
-							<div class="input-field col s6">
-								<n:label for="facebook">Facebook</n:label>
-								<textbox id="facebook" type="text" value="@bind(vm.persona.facebook)"> </textbox>
-							</div>
+
 						</tabpanel>
 					</tabpanels>
+
 				</tabbox>
+
 			</div>
 		</div>
 		
