--- a/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioIndex.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/voluntario/VoluntarioIndex.zul
@@ -1,6 +1,27 @@
 <?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" signature="java.lang.String convertirLongADate(Long)"?>
 
 <zk xmlns:n="native" xmlns:w="client">
+
+	<style>
+		input { background: #FFFFFF !important; height: 17px; }
+
+		.page-content-main input[type="text"], .page-content-main
+		input[type="password"], .page-content-main input[type="email"],
+		.page-content-main input[type="url"], .page-content-main
+		input[type="time"], .page-content-main input[type="date"],
+		.page-content-main input[type="datetime-local"],
+		.page-content-main input[type="tel"], .page-content-main
+		input[type="number"], .page-content-main input[type="search"],
+		.page-content-main textarea.materialize-textarea { height: 23px;
+		font-size: 1.2em; }
+
+		.z-combobox-inplace .z-combobox-input, .z-bandbox-inplace
+		.z-bandbox-input, .z-datebox-inplace .z-datebox-input,
+		.z-timebox-inplace .z-timebox-input, .z-spinner-inplace
+		.z-spinner-input, .z-doublespinner-inplace
+		.z-doublespinner-input { border: 0; padding: 0px; }
+	</style>
+
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
@@ -9,8 +30,42 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="listbox" model="@load(vm.objectsList)"
-						selectedItem="@bind(vm.selectedObject)">
+					<listbox id="listbox" model="@load(vm.objectsList)"  selectedItem="@bind(vm.selectedObject)" emptyMessage="No hay voluntarios para mostrar">
+						
+						<auxhead>
+							<auxheader>
+								<div>
+									<span class="prefix filter fa fa-filter"> </span>
+									<combobox id="tipo_persona" inplace="true" tooltip="Tipo de persona" placeholder="Tipo de persona"
+											  model="@bind(vm.tipoPersonaEnums)"
+										      selectedItem="@bind(vm.tipoPersonaEnum)"
+										      onChange="@command('changeFilter')"
+										      style="background: rgb(89, 78, 70); margin: 0px; margin-left: 6px; margin-top: 0px; display: inline;  width: 75%;">
+										<template name="model">
+											<comboitem label="@load(each)" />
+										</template>
+									</combobox>
+								</div>
+							</auxheader>
+							<auxheader></auxheader>
+							<auxheader></auxheader>
+							<auxheader>
+								<div sclass="col s12">
+									<span class="prefix filter fa fa-filter"> </span>
+									<combobox id="Estatus"
+										inplace="true" tooltip="Estatus" model="@bind(vm.estatusVoluntarioEnums)"
+										onChange="@command('changeFilter')"
+										style="background: rgb(89, 78, 70); margin: 0px; margin-left: 6px; margin-top: 0px; display: inline;  width: 75%;"
+										selectedItem="@bind(vm.estatusVoluntarioEnum)">
+										<template name="model">
+											<comboitem label="@load(each.toString())" />
+										</template>
+									</combobox>
+								</div>
+							</auxheader>
+						</auxhead>
+						
+						
 						<listhead sizable="true">
 							<listheader width="25%" label="Cédula" />
 							<listheader width="25%" label="Nombre" />
